User-visible changes in version 1.0.3  (2011-  -  ):
* embedded Lua (lightweight programming language)
* syntax changes and enhancements in dataset transformations (@n = ...);
  example: "@0 = @0 - 0.23 * @1" removes (background) @1 with y's scaled
  by factor 0.23 from dataset @0, if @0 and @1 have different x's, linear
  interpolation is used.
* added calculation of Polyline derivatives, what enables weighted least
  squares approximation by broken lines
* gzipped fit files can be read directly (extension .fit.gz or .fityk.gz)
* new option max_fitting_time -- stopping criterium based on elapsed time
* GUI: mouse wheel and mouse extra buttons can be used to zoom in/out
* Mac GUI: added Session > New Window that opens new window (open -n Fityk.app)

User-visible changes in version 1.0.2  (2011-06-08):
* changed Data > Load File dialog
* fixed a few minor problems and a major one (GUI not working on OSX 10.5)

User-visible changes in version 1.0.1  (2011-03-30):
* corrected calculation of Exponentially Modified Gaussian
* added calculation of confidence intervals
* GUI: anti-aliasing (can be switched off in menu GUI > Anti-aliasing)
* added (experimental) option guess_uses_weights that changes peak "guessing"
* as usually, a few bug fixes and minor changes in the GUI

User-visible changes in version 1.0.0  (2011-03-18):
* fixed bugs: several bugs in the powder diffraction add-on,
  problem with negative simple-variables, crash when the status bar has an
  extra value set
* GUI: several changes necessary to make the program working on OSX (>= 10.4)
* GUI: new configuration dialogs for plots
* GUI: all configs including the default one are now stored in .fityk/configs/
* samples are always installed, removed configure option --with-samples,
  added menu Help > Examples in the GUI
* requires wxWidgets >= 2.9.1

User-visible changes in version 0.9.8  (2011-06-08):
* several bug fixes ported from version 1.0.2
  (unlike 1.x, this version can be built with wxWidgets 2.8)
